# network_analizer

./: main.py  pyproject.toml
logic/: hardware.py  net_interface.py  network.py
src/: contstants.py  main.py
src/logic/: __init__.py  hardware.py  network.py
src/ui/: __init__.py  app.py  fonts.py  traffic.py
